[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed_stack_providers"
version = "0.1.17"
description = "Lightspeed Stack providers for llama-stack"
requires-python = ">=3.12"
dependencies = [
    "llama-stack>=0.2.22",
    "llama-stack-client>=0.2.22",
    "httpx",
    "pydantic>=2.10.6",
    "litellm>=1.75.5.post1",
    "sqlalchemy>=2.0.0"
]

[tool.setuptools.packages]
find = {}

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.8.0",
]
test = [
    "behave>=1.2.6",
    "requests>=2.31.0",
    "parse>=1.19.0",
    "parse-type>=0.6.0",
]

[tool.ruff]
[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "unittest" = { msg = "use pytest instead of unittest" }, "unittest.mock" = { msg = "use pytest-mock instead of unittest.mock" } }
